# mini-cfo-copilot

./: README.md  app_fallback.py  main.py  pyproject.toml  requirements.txt  show_dashboard.py
agent/: intent.py  tools.py
components/: blocks.py  charts.py
exporters/: pdf_report.py
features/: intents.py
tests/: test_aggregation.py  test_burn_rate.py  test_currency_conversion.py  test_enhanced.py  test_enhanced_functions.py  test_eur_conversion.py  test_metrics.py
ui/: theme.py
utils/: formatting.py
